buildscript {
    repositories {
        mavenLocal()
        maven { url 'https://maven.aliyun.com/repository/google/' }
        maven { url 'https://maven.aliyun.com/repository/public/' }
        maven { url 'https://maven.aliyun.com/repository/spring/' }
        maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
        maven { url 'https://maven.aliyun.com/repository/spring-plugin/' }
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:3.5.6"
        classpath "io.spring.gradle:dependency-management-plugin:1.1.7"
    }
}

plugins {
    id 'java'
}

apply plugin: "org.springframework.boot"
apply plugin: "io.spring.dependency-management"

group = 'com.vibeport'
version = '0.0.1-SNAPSHOT'
description = 'vibeport Project'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // --- Spring Boot 기본 스타터 ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // --- MyBatis ---
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

    // --- JWT ---
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // --- 메일링 ---
    implementation 'javax.mail:javax.mail-api:1.6.2'
    implementation 'com.sun.mail:javax.mail:1.6.2'

    // --- DB & 로그 ---
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'

    // --- Spring AI / OpenAI ---
    implementation platform("org.springframework.ai:spring-ai-bom:1.1.0")
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'io.projectreactor.netty:reactor-netty-http'
    implementation 'com.openai:openai-java:4.9.0'

    // LangChain4j 메인 모듈
    implementation 'dev.langchain4j:langchain4j:0.35.0'
    implementation 'dev.langchain4j:langchain4j-google-ai-gemini:0.35.0'

    // 제미나이
    implementation 'com.google.genai:google-genai:1.30.0'

    // AWS SES
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'software.amazon.awssdk:ses:2.29.46'

    // --- 개발 편의 ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // --- 테스트 ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
